Bug 355588 - Switching between alternative widgets makes them lose settings
Summary: Switching between alternative widgets makes them lose settings
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.4.3
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: usability
: 368528 368915 390848 430084 431139 450130 455088 456314 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-11-19 13:24 UTC by Gregor Mi
Modified: 2022-07-18 06:51 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor Mi 2015-11-19 13:24:41 UTC
I noticed this when I tried out an alternative application launcher and different clocks via the "Alternatives..." menu:

After switching back to the original one, all custom widget settings were reset to default.

I can imagine that this is due to the fact that new widgets are added with default settings and "switching back" is just like adding a new widget.
Comment 1 Kai Uwe Broulik 2015-11-25 22:46:37 UTC
The settings are discarded when applets are switched. It could be worth trying out to just dump the old settings into the new plasmoid, I doubt it'll break much. The only setting that is currently migrated is the shortcut (so you can press Alt+F1 even if you replaced the default launcher).
Comment 2 Kai Uwe Broulik 2016-09-21 12:48:22 UTC
*** Bug 368915 has been marked as a duplicate of this bug. ***
Comment 3 Kai Uwe Broulik 2016-10-05 13:56:16 UTC
*** Bug 368528 has been marked as a duplicate of this bug. ***
Comment 4 Tony 2016-12-21 21:25:41 UTC
This bug somehow "got bigger", i used to have it only for alternate task managers, as i reported here bug 368528. Now i get it for switching launchers.

Even worse, kicker does not remember my favorites after logging out.

Neon unstable.
Frameworks 5.30.0
QT 5.7.0
Plasma 5.8.90
Comment 5 Stefano 2017-11-21 10:39:15 UTC
Plasma 5.11.3 and Frameworks 5.40.0 here.
In my setup the launcher is keeping the favourites when selecting an alternative widget, but the task manager loses the pinned icons when changing from task manager to icon only and reverse.
Comment 6 David Edmundson 2018-03-12 18:32:03 UTC
*** Bug 390848 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2020-12-07 17:28:04 UTC
*** Bug 430084 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-01-04 20:30:59 UTC
*** Bug 431139 has been marked as a duplicate of this bug. ***
Comment 9 Kisaragi Hiu 2022-03-26 22:43:32 UTC
This is a pretty bad usability issue: given the icons only mode and icons-with-labels mode are implemented as separate plasmoids, enabling or disabling labels right now means losing pinned apps.

Perhaps this might be difficult to solve for all plasmoids with alternatives (especially for user-made plasmoids), but Plasma's own plasmoids should absolutely share config. At the very least, it should be possible to enable or disable labels in the task manager plasmoid without losing pinned apps.
Comment 10 Nate Graham 2022-03-26 22:48:05 UTC
Yeah, agreed.
Comment 11 medin 2022-03-27 11:05:06 UTC
(In reply to mail from comment #9)
> At the very least, it should be possible to enable
> or disable labels in the task manager plasmoid without losing pinned apps.

Not only pinned apps, even the order of favorite apps is reset.
Comment 12 Stefano 2022-04-03 18:34:23 UTC
Not sure if it is just related or the same bug:
Switching global themes make you lose your config.
There's more: you might break the default config as well:
-Switch to a theme without the default launcher on the 'meta' key
-Switch back to default theme

Your meta shortcut is now broken, it doesn't open the launcher anymore, even if you select the option to reset to defaults in the GUI.

I could even be ok with losing your customizations when you switch to another global theme, but resetting everything to default should give you back the original behaviour
Comment 13 Nate Graham 2022-04-28 21:54:53 UTC
*** Bug 450130 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2022-06-09 16:58:23 UTC
*** Bug 455088 has been marked as a duplicate of this bug. ***
Comment 16 Fushan Wen 2022-06-23 11:05:51 UTC
Git commit b9a3005f39a5c2f0336b7f687abe1e86d595a40d by Fushan Wen.
Committed on 23/06/2022 at 10:57.
Pushed by fusionfuture into branch 'master'.

Restore old applet configuration after switching to alternative

In task manager, switching between icon task manager and text task manager
loses the old settings, which is inconvenient. This copies the old
configuration to the new applet to fix that behavior.
FIXED-IN: 5.26

M  +18   -14   shell/alternativeshelper.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/b9a3005f39a5c2f0336b7f687abe1e86d595a40d
Comment 17 Fushan Wen 2022-07-04 10:46:43 UTC
*** Bug 456314 has been marked as a duplicate of this bug. ***
Comment 18 medin 2022-07-17 22:57:30 UTC
The modified order of favorite apps is not preserved.

Operating System: Manjaro Linux
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.18.12-2-MANJARO (64-bit)
Graphics Platform: X11
Comment 19 Fushan Wen 2022-07-17 23:11:43 UTC
Not related. Please open a new bug.
Comment 20 Nate Graham 2022-07-18 01:28:23 UTC
Also no need to open a new bug report; that specific issue is Bug 456412.