Restore old applet configuration after switching to alternative

In task manager, switching between icon task manager and text task manager
loses the old settings, which is inconvenient. This copies the old
configuration to the new applet to fix that behavior.

BUG: 355588
FIXED-IN: 5.26